* fixed a bug researched by Varadi Zsolt Gyula, if the buffer is one byte long   or empty, assume text anyways, fixes Styled Edit opening empty files (#1610)

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@22892 a95241bf-73f2-0310-859d-f6bbb57e9c96